Made notifications handler accept many read notifications
